--- a/scrapingR/templates/list.html
+++ b/scrapingR/templates/list.html
@@ -85,12 +85,29 @@
 					
 							
 							</div>
+							<button class="btn btn-primary" type="submit" name="inf">Inf</button>
+                			<button class="btn btn-primary" type="submit" name="sup">Sup</button>
 							
 						</section>
 					</div>
 					{% endfor %}
 				</div>
 			</section>
+
+			<div class="col-md-2 " style="margin-left: 250px;"  >
+				<a
+				href="/sortbyprice"
+				class="btn btn-primary btn-xs"
+				><i></i>prix croissant </a
+			  >
+			  </div>
+			  <div class="col-md-2">
+				<a
+				href="/sortby_price"
+				class="btn btn-primary btn-xs"
+				><i></i>prix decroissant</a
+			  >
+			  </div>  
 
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
